--- a/webapp/rtol.css
+++ b/webapp/rtol.css
@@ -10,11 +10,12 @@
         border-bottom: 1px solid #ccc;
         margin: -15px 0 0 0; 
         padding-bottom: 19px;
-        padding-right: 200px;
+	padding-left:200px;
 	}
 
 body.rtol #navlist   {unicode-bidi: embed;
-	direction: rtl;}
+	direction: rtl;
+	padding-right: 200px}
 
 #navlist ul, #navlist li {
         display: inline;
@@ -26,7 +27,7 @@ body.rtol #navlist   {unicode-bidi: embed;
         background: #E8EBF0;   
         border: 1px solid #ccc;
         color: #666;
-        float: right;
+        float:left;
         font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
         font-size: 1.0em;   
         font-weight: normal;
@@ -35,6 +36,8 @@ body.rtol #navlist   {unicode-bidi: embed;
         padding: 1px 5px 0px 5px;
         text-decoration: none;
 	}
+body.rtol #navlist a {float:right;}
+
 
 #navlist a:link#current, #navlist a:visited#current {
         background: #fff;
