--- a/webapp/rtol.css
+++ b/webapp/rtol.css
@@ -1,3 +1,5 @@
+body { font-family: "Tahoma", verdana, lucida, arial, helvetica, sans-serif; }
+
 #header { position: relative;
 	top: 0pt;
 	left: 0pt;
@@ -13,10 +15,6 @@
 	padding-left:200px;
 	}
 
-body.rtol #navlist   {unicode-bidi: embed;
-	direction: rtl;
-	padding-right: 200px}
-
 #navlist ul, #navlist li {
         display: inline;
         list-style-type: none;
@@ -28,7 +26,6 @@ body.rtol #navlist   {unicode-bidi: embed;
         border: 1px solid #ccc;
         color: #666;
         float:left;
-        font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
         font-size: 1.0em;   
         font-weight: normal;
         line-height: 1.4em;
@@ -36,7 +33,7 @@ body.rtol #navlist   {unicode-bidi: embed;
         padding: 1px 5px 0px 5px;
         text-decoration: none;
 	}
-body.rtol #navlist a {float:right;}
+
 
 
 #navlist a:link#current, #navlist a:visited#current {
@@ -58,8 +55,7 @@ body.rtol #navlist a {float:right;}
 	padding:1em;
 	clear:both;
 	}
-body.rtol #printer   {unicode-bidi: embed;   
-           direction: rtl;}
+
 
 #content-sub-1 { float: right;
 	width: 200px;
@@ -67,8 +63,7 @@ body.rtol #printer   {unicode-bidi: embed;
 	clear:both;
 	}
 
-body.rtol #content-sub-1 {unicode-bidi: embed;   
-           direction: rtl;}
+
 
 #content-sub-2 { float: right;
 	width: 200px;
@@ -76,8 +71,7 @@ body.rtol #content-sub-1 {unicode-bidi: embed;
 	clear:both;
 	}
 
-body.rtol #content-sub-2 {unicode-bidi: embed;   
-           direction: rtl;}
+
 
 #content-main {position:relative;
 	top:0;
@@ -86,8 +80,7 @@ body.rtol #content-sub-2 {unicode-bidi: embed;
 	padding:1.5em;
 	border-right:1px solic #ccc;
 	}
-body.rtol div#introhelp {unicode-bidi: embed;
-	direction: rtl;}
+
 
 #footer { position: relative;
 	top: 0pt;
@@ -107,15 +100,9 @@ h3 { font-size: normal;
 	text-align: center;
 	font-weight:bold;}
 
-body.rtol ul (unicode-bidi: embed;
-	direction: rtl;}
-body.rtol li {unicode-bidi: embed;
-	direction: rtl;}
 
 
 form { border:none;}
-body.rtol form {unicode-bidi: embed;
-	direction: rtl;}
 
 
 
@@ -138,6 +125,31 @@ a:hover {background-color: yellow;}
 img {border:none;}
 
 /*  RtoL stuff */
+
+body.rtol #navlist   {unicode-bidi: embed;
+	direction: rtl;
+	padding-right: 200px}
+
+body.rtol form {unicode-bidi: embed;
+	direction: rtl;}
+
+body.rtol ul {unicode-bidi: embed;
+	direction: rtl;}
+body.rtol li {unicode-bidi: embed;
+	direction: rtl;}
+body.rtol div#introhelp {unicode-bidi: override;
+	direction: rtl;}
+
+body.rtol #navlist a {float:right;}
+body.rtol #printer   {unicode-bidi: embed;   
+           direction: rtl;}
+body.rtol #content-sub-1 {unicode-bidi: embed;   
+           direction: rtl;}
+body.rtol #content-sub-2 {unicode-bidi: embed;   
+           direction: rtl;}
+
+/* Farsi Stuff */
+
 
 
 
