--- a/webapp/rtol.css
+++ b/webapp/rtol.css
@@ -3,7 +3,7 @@ body { font-family: "Tahoma", verdana, lucida, arial, helvetica, sans-serif; }
 #header { position: relative;
 	top: 0pt;
 	left: 0pt;
-	margin:none;
+	margin:0pt;
 	visibility: visible;
 	clear: both;
 	padding:1em;}
@@ -78,7 +78,7 @@ body { font-family: "Tahoma", verdana, lucida, arial, helvetica, sans-serif; }
 	left:0;
 	margin-right:240px;
 	padding:1.5em;
-	border-right:1px solic #ccc;
+	border-right:1px solid #ccc;
 	}
 
 
@@ -92,11 +92,11 @@ h1 { font-size: 2.5em;
 	text-align: center;
 	font-weight: bold;}
 
-h2 { font-size: normal;
+h2 { font-size: 1em;
 	text-align: center;
 	font-weight: bold;}
 
-h3 { font-size: normal;
+h3 { font-size: 1em;
 	text-align: center;
 	font-weight:bold;}
 
@@ -110,8 +110,8 @@ td {padding-left:0.5em;
 	padding-right:0.5em;
 	padding-bottom:0.5em;	}
 
-span.versenum {vertical-align: sup;
-	font-size: smaller;
+span.versenum {vertical-align: top;
+	font-size: 0.5em;
 	padding-left:0.2em;
 	padding-right:0.2em;}
 
@@ -140,7 +140,7 @@ body.rtol ul {unicode-bidi: embed;
 	direction: rtl;}
 body.rtol li {unicode-bidi: embed;
 	direction: rtl;}
-body.rtol div#introhelp {unicode-bidi: override;
+body.rtol div#introhelp {unicode-bidi:embed;
 	direction: rtl;}
 
 body.rtol #navlist a {float:right;}
