undone some wrong commit to wash.css and started rtol on parchment.css

--- a/webapp/parchment.css
+++ b/webapp/parchment.css
@@ -1135,3 +1135,49 @@ span.sameLemma {
      text-indent : 0;
      line-height : normal;
 }
+/*  RtoL stuff */  
+body.rtol #header {background-position: right top;}
+
+body.rtol #navlist   {unicode-bidi: embed;
+        direction: rtl;
+        padding-right: 200px}
+
+body.rtol div#introhelp{
+        unicode-bidi: embed;
+        direction: rtl;
+        text-align-right;
+}
+body.rtol div#printer{
+        unicode-bidi: embed;
+        direction: rtl;
+        text-align-right;
+}
+body.rtol div#content-sub-1{
+        unicode-bidi: embed;
+        direction: rtl;
+        text-align-right;
+}
+body.rtol div#content-sub-2 {
+        unicode-bidi: embed; 
+        direction: rtl;
+        text-align-right;
+}
+ 
+body.rtol #navlist a {float:right;}
+
+body.rtol #externallinks li a{
+        padding: 0.25em 0.5em 0.25em 0.75em;
+        border-left: .5em solid #ccc;
+        border-right: none;
+}
+ 
+body.rtol #header h1 {
+        text-align: right;
+        padding: 0px 70px 0px 0px;
+}
+body.rtol h2, body.rtol h3, body.rtol li, body.rtol ul, body.rtol form, body.rtol a {
+        unicode-bidi:embed;
+        direction:rtl;
+        text-align:right;
+}
+  
