more rtol stuff

--- a/webapp/sandy.css
+++ b/webapp/sandy.css
@@ -31,7 +31,6 @@ font-weight: bold;
 letter-spacing: .5em;
 text-decoration: none;
 }
-
 #header h1 acronym
 {border:0;}
 
@@ -742,8 +741,7 @@ body.rtol div#content-sub-2 {
         direction: rtl;
         text-align:right;
 }
- 
-body.rtol #navlist a {float:right;}
+
 
 body.rtol #externallinks li a{
         padding: 0.25em 0.5em 0.25em 0.75em;
@@ -751,10 +749,9 @@ body.rtol #externallinks li a{
         border-right: none;
 }
  
-body.rtol #header h1 {
-        text-align: right;
-        padding: 0px 70px 0px 0px;
-}
+
+body.rtol #header h1 {text-transform:none; letter-spacing: 0px;}
+
 body.rtol h2, body.rtol h3, body.rtol li, body.rtol ul, body.rtol form, body.rtol a {
         unicode-bidi:embed;
         direction:rtl;
