--- a/webapp/wash.css
+++ b/webapp/wash.css
@@ -251,6 +251,9 @@ padding: 15px 15px 20px 15px;
 width:auto;
 font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
 }
+body.rtol #content-main p{
+text-align:right
+}
 
 
 #footer{
@@ -369,10 +372,11 @@ background-repeat: no-repeat;
 border-left: 0px solid #fff;
 border-bottom: 1px solid #fff;
 }
-body.rtol #library li.closed {
+body.rtol #library li {
 background-position:right;
 }
-
+body.rtol #library li a {
+padding: 0 20px;}
 
 #library li.open {
 margin: .5em 0px 0px 0px;
@@ -428,7 +432,9 @@ border-top: 1px solid #ccc;
 text-align: left;
 border-bottom: 1px solid #E8EBF0;
 }
-
+body.rtol #translations li{
+text-align:right;
+}
 
 
 #translations li a{
@@ -552,6 +558,8 @@ border-top: 1px solid #ccc;
 text-align: left;
 border-bottom: 1px solid #E8EBF0;
 }
+body.rtol #studytools li{
+text-align:right;}
 
 #studytools li a{
 display: block;
@@ -611,6 +619,8 @@ border-top: 1px solid #ccc;
 text-align: left;
 border-bottom: 1px solid #E8EBF0;
 }
+body.rtol #commentaries li{
+text-align:right}
 
 #commentaries li a{
 display: block;
@@ -655,7 +665,7 @@ font-style: italic;
 margin: 0px 14em 0px 11.5em;
 padding: 0px .5em 0px .5em;
 }
-
+body.rtol #powersearch {text-align:right;}
 
 
 /*   Search Results   */
