--- a/webapp/sandy.css
+++ b/webapp/sandy.css
@@ -758,3 +758,22 @@ body.rtol h2, body.rtol h3, body.rtol li, body.rtol ul, body.rtol form, body.rto
         text-align:right;
 }
   
+body.rtol #library li{
+        margin: .5em 5px 0px 0px;
+        background-position:right;
+}
+
+body.rtol #library li a {
+padding: 0 20px;}
+body.rtol #translations li{
+text-align:right;
+}
+body.rtol #studytools li{
+text-align:right;}
+body.rtol #commentaries li{
+text-align:right}
+
+body.rtol #powersearch {text-align:right;}
+
+body.rtol #content-main p{
+text-align:right;}
