--- a/webapp/wash.css
+++ b/webapp/wash.css
@@ -657,7 +657,8 @@ float: right;
 margin: -1.8em 0 0 0;
 font-style: italic;
 }
-
+body.rtol dt span {
+float:left;}
 dd {
 background: #fff;
 margin: 0px 0px 0px 0px;
