language dependent settings added for Farsi and Divehi.

--- a/webapp/wash.css
+++ b/webapp/wash.css
@@ -978,3 +978,5 @@ text-align:right}
 
 body.rtol #powersearch {text-align:right;}
 
+*.div * {font-family: faruma;}
+*.fa * {font-family: lotus tahoma nazli;}
