farsi fonts to be chosen

--- a/webapp/wash.css
+++ b/webapp/wash.css
@@ -978,5 +978,12 @@ text-align:right}
 
 body.rtol #powersearch {text-align:right;}
 
-*.div * {font-family: faruma;}
+
+
+
+
+
+
+
+*.div * {font-family: faruma; font-size:14px;}
 *.fa * {font-family: lotus tahoma nazli;}
