some old changes

--- a/webapp/wash.css
+++ b/webapp/wash.css
@@ -987,3 +987,4 @@ body.rtol #powersearch {text-align:right;}
 
 *.div * {font-family: faruma; font-size:14px;}
 *.fa * {font-family: lotus tahoma nazli;}
+div.en  {text-align:left;}
