--- a/webapp/parchment.css
+++ b/webapp/parchment.css
@@ -149,8 +149,12 @@ font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 	font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
 	background: #C1A97F;
 }
-.verse {
+.verse,.intro {
 	font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
+}
+
+.intro {
+	border-bottom: 1px solid #ccc;
 }
 
 .clk {
