--- a/webapp/wash.css
+++ b/webapp/wash.css
@@ -749,8 +749,12 @@ div.lexiconentry {
 	background-color: #eee;
 	font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
 }
-.verse {
+.verse,.intro {
 	font-family:cardo,tahoma,code2000,code2001,arial unicode ms,arial,sans serif,serif;
+}
+
+.intro {
+	border-bottom: 1px solid #ccc;
 }
 
 .clk {
